Final Final Stuffy Stuffy Stuff

--- a/Assignments/akanios/Final Project/coulson.html
+++ b/Assignments/akanios/Final Project/coulson.html
@@ -2,9 +2,11 @@
 <head>
 	<title>Director Profile: Phil Coulson</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="SHORTCUT ICON" href="http://fc00.deviantart.net/fs71/i/2013/227/a/a/shield_black_by_silver2012-d6i86ds.png"/>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
 	<link rel="stylesheet" type="text/css" href="shieldmain.css">
+	<link rel="stylesheet" type="text/css" href="shieldfont.css">
 </head>
 <body>
 
@@ -13,7 +15,7 @@
 			<p class="navbar-text">Welcome Agent</p>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-				<li class="classifiedlink"><a href="#">Classified</a></li>
+				<li class="classifiedlink" onclick="alert('Level 7 Access Only');"><a href="#">Classified</a></li>
 		        <li class="dropdown">
 		         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Avengers<span class="caret"></span></a>
 		         	<ul class="dropdown-menu" role="menu">
@@ -41,20 +43,55 @@
 		        </li>
 		      	</ul>
 		      	<div class="logoutbtn">  	
-			    <button onclick="location.href='index.html'" type="button" class="btn btn-danger btn-xs">Logout</button>
+			    <button onclick="location.href='index.html'" type="button" class="btn btn-danger btn-sm">Logout</button>
 				</div>
 			</div>
 	    </div>  
 	</nav>
-		<div class="container">
-
-		</div>
-
+		
 		<div class="bodycontainer">
 
 			<div class="bodyheader">
-				Our Fearless Leader : Phil Coulson
+				Agent Profile : Phil Coulson
 			</div>
+
+			<p class="firstcoulson">Director Phillip J. "Phil" Coulson is an espionage agent working for S.H.I.E.L.D. and the current director of S.H.I.E.L.D., with the mandate from former Director Fury to rebuild the organization.<br><br> (Picture's Inserted at the Director's Request)</p>
+
+			<img src="coulsonlogo.jpg" class="coulsonpic1">
+
+			<div class="EarlyLife">
+				Background History
+				<br>
+				<br>
+			</div>
+
+			<p class="secondcoulson">A son of Robert and Julie Coulson, Phil Coulson was born in Boston, MA, on July 8, 1964. Coulson grew up being a huge fan of Captain America, and collected a set of vintage Captain America cards over the course of two years. Coulson lost his father at a very young age, and his mother is now deceased as well. Coulson was recruited directly out of high school to S.H.I.E.L.D. by Nick Fury. Fury served as his training officer. Coulson trained alongside (now known Hydra Agent) John Garrett. </p>
+
+			<img src="coulsoncap.gif" class="capgif">
+
+			<div class="IronMan">
+				Invinsible Iron Man
+			</div>
+
+			<p class="thirdcoulson">As an agent of S.H.I.E.L.D., Coulson attempted to set up meetings with Tony Stark regarding his abduction and subsequent "rescue" in Afghanistan, but Stark refused, instead Coulson received information from Pepper Potts about Obadiah Stane's involvement in Tony's kidnapping and attempted homicide. Coulson and four other agents tried to arrest Stane, but their efforts were thwarted by the Iron Monger Armor. Coulson later derived a cover story for Stark, one which Stark refused (of course) to use.</p>
+
+			<img src="coulsonstark.gif" class="starkgif">
+
+			<div class="Avengers">
+				The Avengers Initiative
+			</div>
+
+			<p class="fourthcoulson">When a threat to the world required the formation of a team of Super Heroes to defeat it, Coulson took on the task of assembling Nick Fury's Avengers as just another day at the office. Coulson was tasked with assembling all the heroes S.H.I.E.L.D. had recruited thusfar and escourting them into the Agency's new helicarrier.</p>
+
+			<img src="coolcoulson.gif" class="coolgif">
+			
+			<div class="death">
+				The End
+			</div>
+
+			<p class="fifthcoulson">After the team's first mission, Coulson told Fury that the team was not prepared to face the common menace, and that they needed to be motivated some way. Stark managed to capture Loki and bring him to the Helicarrier, when a brainwashed Clint Barton attacked and Loki was able to break free. Coulson reached Loki's prison, only to find the villain out of his cage, and Thor trapped in his place. The agent threatened Loki with a weapon, Coulson's Revenge (brilliant name Director), created from The Destroyer's body, but the Asgardian teleported and stabbed him through his back by using his staff. Later, when the battle was over and lost, Fury reached Coulson just in time to hear his last words. As he died, Phil suggested Fury use his death to motivate the Avengers into working together as a team. Coulson's death had a large effect on the team who became saddened or enraged in some way, but Phil's death would be the final motivator for the Avengers founding.</p>
+
+			<img src="weapon.gif" class="weapongif">
 
 
 		</div>
