--- a/Assignments/akanios/Final Project/restricted.html
+++ b/Assignments/akanios/Final Project/restricted.html
@@ -1,13 +1,23 @@
 <html>
 <head>
 	<title>Level 9 | Required</title>
+	<link rel="SHORTCUT ICON" href="http://fc00.deviantart.net/fs71/i/2013/227/a/a/shield_black_by_silver2012-d6i86ds.png"/>
 	<link rel="stylesheet" type="text/css" href="restricted.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
 </head>
 <body>
 
 	<marquee behavior="scroll" direction="left" class="scrolldenied">Access Denied | Level 9 Required</marquee>
 
 	<img class="deniedpic" src="deniedcoulson.jpg">
+
+	<div class="goback">
+		<button onclick="location.href='index.html'" type="button" class="btn btn-warning btn-sm">Go Back</button>
+	</div>
+
+
 
 </body>
 </html>
