--- a/Assignments/akanios/Final Project/shieldmain.html
+++ b/Assignments/akanios/Final Project/shieldmain.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Welcome to S.H.I.E.L.D</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="SHORTCUT ICON" href="http://fc00.deviantart.net/fs71/i/2013/227/a/a/shield_black_by_silver2012-d6i86ds.png"/>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
 	<link rel="stylesheet" type="text/css" href="shieldmain.css">
@@ -14,7 +15,7 @@
 			<p class="navbar-text">Welcome Agent</p>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-					<li class="classifiedlink"><a href="#">Classified</a></li>
+					<li class="classifiedlink" onclick="alert('Level 10 Access Only');"><a href="#">Classified</a></li>
 			        <li class="dropdown">
 			         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Avengers<span class="caret"></span></a>
 			         	<ul class="dropdown-menu" role="menu">
@@ -33,7 +34,7 @@
 			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Agents<span class="caret"></span></a>
 			          	<ul class="dropdown-menu" role="menu">
 			            	<li><a href="coulson.html"><img class="droplogo" src="shielddrop.jpg">Phil Coulson</a></li>
-			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Skye</a></li>
+			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Daisy Johnson (Skye)</a></li>
 			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Melinda May</a></li>
 			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Jemma Simmons</a></li>
 			            	<li><a href="restricted.html"><img class="droplogo" src="shielddrop.jpg">Leopold Fitz</a></li>
@@ -42,7 +43,7 @@
 			        </li>
 			      	</ul>
 			    <div class="logoutbtn">  	
-			    <button onclick="location.href='index.html'" type="button" class="btn btn-danger btn-xs">Logout</button>
+			    <button onclick="location.href='index.html'" type="button" class="btn btn-danger btn-sm">Logout</button>
 				</div>
 			</div>
 	    </div>  
@@ -53,6 +54,59 @@
 
 	<div class="bodycontainer">
 		<a href="hydralogin.html"><img class="hydralogo" src="hydralogo.png"></a>
+
+		<div class="header">
+			<img src="shieldsmall.jpg" class=
+				"shieldsmall">Welcome To S.h.i.e.l.d.<img src="shieldsmall.jpg" class=
+				"shieldsmall2"><br>
+		</div>
+		<div class="header2">
+			Explore Our History
+		</div>
+
+		<div class="beginnings">
+			Formation
+		</div>
+
+		<p class="firstshield">The Strategic Homeland Intervention, Enforcement and Logistics Division (or as you probably know S.H.I.E.L.D.) was formed shortly after World War II as a successor agency to the Strategic Scientific Reserve (SSR), an Allied deep science agency which fought against the Nazi sponsored special weapons division HYDRA during the war. The founders of the new agency were Chester Phillips, the director of the SSR, Howard Stark, an industrialist of great wealth and a scientific genius, and Margaret "Peggy" Carter. </p>
+
+		<img src="shieldfounders.jpg" class="founderspic">
+
+		<div class="invasion">
+			Infestation
+		</div>
+
+		<p class="secondshield">Shortly after the war, as part of Operation Paperclip, S.H.I.E.L.D. recruited the scientists of Nazi Germany as a think tank for the newborn agency. The infamous Arnim Zola was among the recruited scientists, but he used his new position to secretly rebuild HYDRA. With no one suspecting, HYDRA secretly grew within S.H.I.E.L.D., orchestrating many crises in the world over the next decades. When Howard Stark became suspicious, he and his wife Maria were killed in an automobile "accident" secretly arranged by HYDRA on Long Island in 1991. (Tony Stark yet to be informed)</p>
+
+		<img src="zola.gif" class="zolagif">
+
+		<div class="fury">
+			Nicholas J. Fury
+		</div>
+
+		<p class="thirdshield">During a hostage situation in Bogota, Agent Nick Fury successfully saved all the hostages, including Alexander Pierce's daughter from the E.N.L.. Pierce, who was by that time also a member of World Security Council, was surprised by Fury's performance and later made him director of S.H.I.E.L.D. Under Fury's leadership, the agency has recruited some of the best marksmen and spies in the world, including Clint Barton and Natasha Romanoff. At that time, Agent Phil Coulson served as Fury's right hand man, though the actual deputy director of the agency was Maria Hill.</p>
+
+		<img src="fury.gif" class="furygif">
+
+		<div class="America">
+			Finding a Legacy
+		</div>
+
+		<p class="fourthshield">Sixty-five years after Steve Rogers crash landing, a S.H.I.E.L.D. team discovered the remains of the Valkyrie on Greenland. Rogers' body was inside, perfectly preserved in ice. Nick Fury was immediately called, and he informed Phil Coulson about the discovery. They both watched the recovery of the body, which was defrosted and then shipped to S.H.I.E.L.D. Headquarters in New York City. Rogers was kept in a simulated 1942 environment to try and ease him into what was happening. When he awoke he quickly realized it wasn't real and escaped into the streets of a 2011 New York City. In Times Square, Rogers encounters Nick Fury who told him that he's been "asleep" for nearly seventy years. Steve then realized that many of his old friends were very likely dead, including his love interest, Peggy Carter.</p>
+
+		<img src="capsicle.jpg" class="cappic">
+
+
+		<div class="Initiative">
+			The Initiative
+		</div>
+
+		<p class="fifthshield">At some point during his directorship Nick Fury had an idea to employ people with special powers and abilities to defend the Earth against threats that could be too complicated for S.H.I.E.L.D. to handle. He named that operation the Avengers Initiative. Though it was soon shut down. When Loki stole the Tesseract from the Joint Dark Energy Mission Facility and escaped along with several enslaved S.H.I.E.L.D. personnel, Director Nick Fury reactivated the Avengers Initiative to counter the threat.</p>
+
+		<img src="avengersyo.gif" class="yogif">
+
+
+
 	</div>
 
 
