--- a/Assignments/DConner/Final/TheDawnWikiV1/Forums/DarkDawn.html
+++ b/Assignments/DConner/Final/TheDawnWikiV1/Forums/DarkDawn.html
@@ -42,11 +42,11 @@
    <div class="lemming forum"> <!-- Information Section -->
       <h1><i class="fa fa-eye"></i>Dark Dawn<i class="fa fa-eye"></i></h1>
       <div class="grouping bordtwo">
-         <div class="section bordtwo"><p class="lefty leader">Why do gods look like Bread?</p><p class="righty">7</p><i class="fa fa-comment righty"></i></div>
-         <div class="section bordtwo"><p class="lefty leader">For the Love of Lebus</p><p class="righty">2</p><i class="fa fa-comment righty"></i></div>
-         <div class="section bordtwo"><p class="lefty leader">Truuuuuuucks</p><p class="righty">4</p><i class="fa fa-comment righty"></i></div>
-         <div class="section bordtwo"><p class="lefty leader">The Madame?</p><p class="righty">3</p><i class="fa fa-comment righty"></i></div>
-         <div class="section bordtwo"><p class="lefty leader">For Narnia!</p><p class="righty">2</p><i class="fa fa-comment righty"></i></div>
+         <a href="../OOPS.html"><div class="section bordtwo"><p class="lefty leader">Why do gods look like Bread?</p><p class="righty">7</p><i class="fa fa-comment righty"></i></div></a>
+         <a href="../OOPS.html"><div class="section bordtwo"><p class="lefty leader">For the Love of Lebus</p><p class="righty">2</p><i class="fa fa-comment righty"></i></div></a>
+         <a href="../OOPS.html"><div class="section bordtwo"><p class="lefty leader">Truuuuuuucks</p><p class="righty">4</p><i class="fa fa-comment righty"></i></div></a>
+         <a href="../OOPS.html"><div class="section bordtwo"><p class="lefty leader">The Madame?</p><p class="righty">3</p><i class="fa fa-comment righty"></i></div></a>
+         <a href="../OOPS.html"><div class="section bordtwo"><p class="lefty leader">For Narnia!</p><p class="righty">2</p><i class="fa fa-comment righty"></i></div></a>
       </div>
    </div>
 
