--- a/Assignments/DConner/Final/TheDawnWikiV1/Template.html
+++ b/Assignments/DConner/Final/TheDawnWikiV1/Template.html
@@ -41,22 +41,22 @@
          <p><i class="fa fa-caret-right fa-fw" id="fa-0"></i>The Dark Dawn</p>
       </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Gregory Sore</p>
+            <a href="OOPS.html"><p><i class="fa fa-minus"></i>Gregory Sore</p></a>
          </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Madam HollowWind</p>
+            <a href="OOPS.html"><p><i class="fa fa-minus"></i>Madam HollowWind</p></a>
          </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Master HollowWind</p>
+            <a href="OOPS.html"><p><i class="fa fa-minus"></i>Master HollowWind</p></a>
          </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Sir Adam Belicose</p>
+            <a href="OOPS.html"><p><i class="fa fa-minus"></i>Sir Adam Belicose</p></a>
          </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Elrieth HollowWind</p>
+            <a href="OOPS.html"><p><i class="fa fa-minus"></i>Elrieth HollowWind</p></a>
          </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Aran HollowWind</p>
+            <a href="OOPS.html"><p><i class="fa fa-minus"></i>Aran HollowWind</p></a>
          </div>
       
       <div class="navselec bordone" id="1">
