--- a/Assignments/abrand/Austin_Brand's_Resume_CS 129.html
+++ b/Assignments/abrand/Austin_Brand's_Resume_CS 129.html
@@ -31,6 +31,7 @@
 		<p>-----------------------------------------------------------------------------------------------------------------------------------------------</p>
 		<p> <i> <b>Work Experience </b> </i> </p>
 		<ul>
+			<li>Currently working at TJ Maxx, and have worked there since June 18, 2014</li>
 			<li>Prestige Delivery Service - Helped with deliveries. 2007-2008</li>
 			<li>Work Study for the fitness center at Alderson-Broaddus. 2014 </li>
 			<li>Concession Stand Manager and Field Worker at The Dugout. 2013-2014 </li>
